# aie6

./: .gitignore
01_Prompt Engineering and Prototyping Best Practices/: README.md  app.py  chainlit.md  pyproject.toml
02_Embeddings_and_RAG/: Embedding_Primer.ipynb  Pythonic_RAG_Assignment.ipynb  pyproject.toml
02_Embeddings_and_RAG/aimakerspace/: pdf_utils.py  vectordatabase.py
